--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/ssnNumbers.db # Ignored to ensure redistribution does not occur
 /Death-Master-File/ # Ignored to ensure redistribution does not occur
-/.gitignore
+/ssnNumbers.db # Ignored to ensure redistribution does not occur
+/Death-Master-File-Data/
